# ListK

./: README.md
listk/: pyproject.toml
listk/src/listk/: lib.py
listk/src/listk/llm/: formatting.py  lm.py  plm.py
listk/src/listk/logical_ir/: README.md  __init__.py  expressions.py  hints.py  nodes.py  plan.py  specs.py  types.py
listk/src/listk/physical_ir/: DESIGN_NOTES.md  README.md  __init__.py  annotations.py  nodes.py  plan.py  properties.py
listk/src/listk/semop/: gensemsort.py  gensemtopk.py  gensemtour.py  semsort.py  semtopk.py  semtour.py
listk/src/temp/llmcalls/: dependicieshandler.py  llmpromptexample.py  requirements.txt  rerankersexample.py
listk/src/temp/tests/: bier_test.py  em_bier_test.py  rz_bier_test.py  sembench_test.py  test_semsort.py  test_semtopk.py
listk/tests/: __init__.py  conftest.py
listk/tests/logical_ir/: __init__.py  test_expressions.py  test_hints.py  test_nodes.py  test_plan.py  test_specs.py  test_types.py
llm-top-k-gt-code/: main.py  pyproject.toml
llm-top-k-gt-code/data/phase2_ir_aggregation/scifact/: metadata.json
llm-top-k-gt-code/data/phase3_reranking/scifact/: metadata.json
llm-top-k-gt-code/data/phase4_rerank_aggregation/scifact/: metadata.json
llm-top-k-gt-code/data/phase5_comparisons/scifact/1/: sorted_ranking.json
llm-top-k-gt-code/data/phase5_comparisons/scifact/100/: sorted_ranking.json
llm-top-k-gt-code/data/phase5_comparisons/scifact/113/: sorted_ranking.json
llm-top-k-gt-code/data/phase5_comparisons/scifact/13/: sorted_ranking.json
llm-top-k-gt-code/data/phase5_comparisons/scifact/3/: sorted_ranking.json
llm-top-k-gt-code/data/phase5_comparisons/scifact/42/: comparisons.jsonl
llm-top-k-gt-code/data/phase5_comparisons/scifact/48/: comparisons.jsonl
llm-top-k-gt-code/data/phase5_comparisons/scifact/50/: comparisons.jsonl  sorted_ranking.json
llm-top-k-gt-code/data/phase5_comparisons/scifact/51/: sorted_ranking.json
llm-top-k-gt-code/data/phase5_comparisons/scifact/53/: comparisons.jsonl
llm-top-k-gt-code/data/phase5_comparisons/scifact/54/: comparisons.jsonl
llm-top-k-gt-code/data/phase5_comparisons/scifact/70/: comparisons.jsonl
llm-top-k-gt-code/data/phase5_comparisons/scifact/72/: comparisons.jsonl
llm-top-k-gt-code/data/phase5_comparisons/scifact/75/: comparisons.jsonl  sorted_ranking.json
llm-top-k-gt-code/data/phase5_comparisons/scifact/94/: sorted_ranking.json
llm-top-k-gt-code/data/phase5_comparisons/scifact/99/: sorted_ranking.json
llm-top-k-gt-code/data/phase7_combined_rankings/scifact/: 1.parquet  115.parquet  124.parquet  127.parquet  13.parquet  42.parquet  48.parquet  5.parquet  53.parquet  54.parquet  57.parquet  70.parquet  metadata.json
llm-top-k-gt-code/scripts/: run_phase3.py  run_phase4.py  visualize_rankings.py
llm-top-k-gt-code/src/aggregation/: __init__.py  base.py  copeland.py  rrf_local.py  schulze.py
llm-top-k-gt-code/src/data/: __init__.py  beir_loader.py  models.py
llm-top-k-gt-code/src/llm/: __init__.py  pairwise.py
llm-top-k-gt-code/src/reranking/: __init__.py
llm-top-k-gt-code/src/retrieval/: base.py  colbert.py  e5.py  splade.py  utils.py
llm-top-k-gt-code/tests/: test_models.py
plot-generation-code/: README.md  main.py  pxplot.py  pyproject.toml
plot-generation-code/main/: Debian (wsl.localhost).lnk  main_human_ndcg@10.json  main_llm_ndcg@10.json  main_llm_recall@10.json
plot-generation-code/plots/heuristics/: embedding_comparison.json  pairwise_rerank_impact.json
plot-generation-code/plots/main/: main_human_recall@10.json
plot-generation-code/src/: __init__.py  combined.py  config.py  data_loader.py  main.py  metrics.py
plot-generation-code/src/plots/: __init__.py  base.py  boxplots.py  (+4 more)
(+684 files in other folders)
