[project]
name = "SoliceDB"
version = "0.0.1"
description = "A database specialized for Semantic Operators with LIstwise, Custom LM Execution."
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "pandas==2.3.3",
    "rank-llm[all]==0.21.0",
    "vllm==0.9.1",
    "transformers<4.54.0",
    "sentence-transformers>=3.0.1,<4.0.0",
    "beir == 2.2.0",
    "pyarrow",
    "lotus-ai",
    "duckdb",
]

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["solicedb"]
